24/traefik.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller-24
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb-24
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb-24
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb-24
        name: traefik-ingress-lb-24
    spec:
      serviceAccountName: traefik-ingress-controller-24
      terminationGracePeriodSeconds: 60
      #tolerations:
      #- operator: "Exists"
      nodeSelector:
        kubernetes.io/hostname: 10.66.0.140
      imagePullSecrets:
      - name: ksyunregistrykey24
      containers:
      - image: hub.kce.ksyun.com/kbdp/traefik:v1.6.5-mp
        name: traefik-ingress-lb-24
        ports:
        - name: http
          containerPort: 88
        - name: admin
          containerPort: 8088
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service-24
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb-24
  ports:
    - protocol: TCP
      port: 88
      name: web
    - protocol: TCP
      port: 8088
      name: admin
  type: NodePort
